# fastapi_ML-model

./: app.py  frontend.py  main.py  pyproject.toml  requirements.txt
