[project]
name = "fastapi-ml-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "pandas>=2.3.3",
    "pickle5>=0.0.12",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "streamlit>=1.52.1",
    "uvicorn[standard]>=0.38.0",
]
